--- a/blocks/client/client.css
+++ b/blocks/client/client.css
@@ -1,8 +1,7 @@
 .client {
-  position: absolute;
   z-index: 2;
   margin: 0;
-  margin-left: 165px;
+  margin-left: 143px;
   background-color: #fcfcfc;
   width: 1276px;
   display: flex;
@@ -10,4 +9,5 @@
   transform: translateY(-113px);
   box-shadow: 50px 50px 100px rgba(0, 0, 0, 0.145947);
   border-radius: 2px;
+  overflow: hidden;
 }
