--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,6 +1,4 @@
 .footer {
-  width: 1440px;
-  height: 920px;
   background-image: url(../../images/footer.png);
   background-repeat: no-repeat;
   background-size: cover;
