--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,6 +1,5 @@
 .header {
   height: 811px;
-  width: 100%;
   background-image: url(../../images/header-back.jpg);
   background-repeat: no-repeat;
   background-size: cover;
