--- a/blocks/product/__item/product__item.css
+++ b/blocks/product/__item/product__item.css
@@ -1,4 +1,3 @@
 .product__item {
-  width: 1440px;
   padding-bottom: 150px;
 }
